--- a/gb/15/7/27/n4489515.md
+++ b/gb/15/7/27/n4489515.md
@@ -1,16 +1,16 @@
 <a name="1" id="1" target="_blank"></a><span id="1"></span>
-<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/nat207/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/nat207/www/master/t/djy/1.jpg" title="大纪元"></a><a href="https://github.com/nat207/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/nat207/www/master/t/djy/3.jpg" title="国际新闻"></a><a href="https://github.com/nat207/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/nat207/www/master/t/djy/4.jpg" title="大陆新闻"></a><a href="https://github.com/nat207/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/nat207/www/master/t/djy/5.jpg" title="评论"></a><a href="https://github.com/nat207/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/nat207/www/master/t/djy/6.jpg" title="文化"></a><a href="https://github.com/nat207/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/nat207/www/master/t/djy/7.jpg" title="生活"></a><a href="https://github.com/nat207/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/nat207/www/master/t/djy/8.jpg" title="娱乐"></a><a href="https://github.com/nat207/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/nat207/www/master/t/djy/9.jpg" title="健康"><a href="https://www.youlucky.com"><img src="https://raw.githubusercontent.com/nat207/www/master/t/djy/10.jpg" title="购物"></a><a href="https://donate.epochtimes.com/?utm_medium=epochtimes&utm_source=referral&utm_campaign=donate_button_djyarticleheader"><img src="https://raw.githubusercontent.com/nat207/www/master/t/djy/12.jpg" title="捐款"></a></td></tr>
-<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/nat207/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/nat207/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/nat207/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/nat207/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/nat207/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/nat207/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/nat207/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/nat207/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/nat207/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/nat207/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/nat207/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/nat207/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/nat207/www/blob/master/README.md?zsrh#8">翻墙</a></p><p><a target="_blank" href="https://github.com/nat207/djy/blob/master/gb/nf5562.md#1">伪火</a> | <a target="_blank" href="https://github.com/nat207/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/nat207/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/nat207/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/nat207/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/nat207/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/nat207/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/nat207/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/nat207/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/nat207/ntdtv/blob/master/gb/prog1530_1.md#1">和平抗议</a> | <a target="_blank" href="https://github.com/nat207/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/nat207/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/nat207/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/nat207/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
+<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/eizauy3553/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/12a.jpg" title="头条要闻" alt="头条要闻"></a></td></tr>
+<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/eizauy3553/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/eizauy3553/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/eizauy3553/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
 <tr><td VALIGN=TOP width="626"><h2 align=center>处理事业废弃物 台经部应协调</h2>
 <img width="600" src="https://i.epochtimes.com/assets/uploads/2015/07/1507262220451538-600x400.jpg" />
 <h6>台中市南区文山垃圾焚化厂外垃圾车大排长龙，其中还夹杂着许多外县市车辆，已严重影响到市区垃圾车无法正常清运垃圾。（吴琼华议员服务处提供） 
 </h6>
 <hr>
-<p>【大纪元2015年07月27日讯】（大纪元记者黄玉燕台湾台中报导）台湾盖了26座<ahref="https://github.com/nat207/djy/blob/master/gb/tag/%E7%84%9A%E5%8C%96%E5%8E%82.md#1">焚化厂</a>，还不够用？台中市3座焚化厂，近半年被来自彰化、云林、南投的垃圾塞爆，中部陷入垃圾大战；追查起因发现，高雄市把“一般事业<ahref="https://github.com/nat207/djy/blob/master/gb/tag/%E5%BA%9F%E5%BC%83%E7%89%A9.md#1">废弃物</a>”的处理价格抬高2~5倍，迫使中部业者将事业废弃物载回价格相对低廉的台中市。台中市长林佳龙出面喊“拒收外县市事业废弃物”，市府环保局也表示经济部工业局应出来协调，事业废弃物归业者，不该让地方政府承担。 </p>
+<p>【大纪元2015年07月27日讯】（大纪元记者黄玉燕台湾台中报导）台湾盖了26座<ahref="https://github.com/eizauy3553/djy/blob/master/gb/tag/%E7%84%9A%E5%8C%96%E5%8E%82.md#1">焚化厂</a>，还不够用？台中市3座焚化厂，近半年被来自彰化、云林、南投的垃圾塞爆，中部陷入垃圾大战；追查起因发现，高雄市把“一般事业<ahref="https://github.com/eizauy3553/djy/blob/master/gb/tag/%E5%BA%9F%E5%BC%83%E7%89%A9.md#1">废弃物</a>”的处理价格抬高2~5倍，迫使中部业者将事业废弃物载回价格相对低廉的台中市。台中市长林佳龙出面喊“拒收外县市事业废弃物”，市府环保局也表示经济部工业局应出来协调，事业废弃物归业者，不该让地方政府承担。 </p>
 <p><h2> 高雄涨价致垃圾回流台中 </h2>
-<p>今年5月中旬，中市议会炮声隆隆，多位议员严词抨击南区文山垃圾<ahref="https://github.com/nat207/djy/blob/master/gb/tag/%E7%84%9A%E5%8C%96%E5%8E%82.md#1">焚化厂</a>外大排长龙，绵延近1公里的垃圾车，其中还夹杂着许多外县市车辆，导致市区垃圾车进不去，家户收垃圾时间被迫延后，民众怨声不断；议员痛批市府“自顾不暇还帮外县市，好大喜功”。</p>
+<p>今年5月中旬，中市议会炮声隆隆，多位议员严词抨击南区文山垃圾<ahref="https://github.com/eizauy3553/djy/blob/master/gb/tag/%E7%84%9A%E5%8C%96%E5%8E%82.md#1">焚化厂</a>外大排长龙，绵延近1公里的垃圾车，其中还夹杂着许多外县市车辆，导致市区垃圾车进不去，家户收垃圾时间被迫延后，民众怨声不断；议员痛批市府“自顾不暇还帮外县市，好大喜功”。</p>
 <p>据中市环保局5月15日统计，中部4县市垃圾堆积量超过4万公吨，其中台中占1万6千公吨、彰化8?700公吨、南投8?500公吨、云林7?500公吨。垃圾无处去，各地掩埋场贮坑满载，有些业者只能找地方暂时堆放，一座座“垃圾小山”引发卫生、恶臭及闷烧危机。</p>
-<p>“台中市从去年开始，就已经没有余裕量可以协助处理”环保局长洪正中指出，高雄市自102年7月调高垃圾处理费，从每公吨由450~1?365元大幅涨到2?307元，导致大量事业<ahref="https://github.com/nat207/djy/blob/master/gb/tag/%E5%BA%9F%E5%BC%83%E7%89%A9.md#1">废弃物</a>流向台中，加上中、投原本订有契约，每日需支援150吨垃圾量；以及去年彰化遇禽流感，彰化焚化厂因处理大量鸡鸭鹅尸体及事业废弃物，导致破管岁修等因素，造成中部垃圾呈现满载。</p>
+<p>“台中市从去年开始，就已经没有余裕量可以协助处理”环保局长洪正中指出，高雄市自102年7月调高垃圾处理费，从每公吨由450~1?365元大幅涨到2?307元，导致大量事业<ahref="https://github.com/eizauy3553/djy/blob/master/gb/tag/%E5%BA%9F%E5%BC%83%E7%89%A9.md#1">废弃物</a>流向台中，加上中、投原本订有契约，每日需支援150吨垃圾量；以及去年彰化遇禽流感，彰化焚化厂因处理大量鸡鸭鹅尸体及事业废弃物，导致破管岁修等因素，造成中部垃圾呈现满载。</p>
 <p><h2>中科应设工业废弃物焚化厂</h2>
 <p>洪正中追究原因指出，中科设厂时有预留土地盖焚化炉，但因怕民众抗争，迟迟不盖。按理说，工业区本该自行处理工业废弃物，以免排挤一般家户垃圾，他呼吁经济部工业局应站出来解决问题。</p>
 <p>中市决定拒收外县市工业废弃物，洪正中说，彰、投一般家户垃圾，估计年底前可慢慢消化完毕；至于一般事业废弃物，经环保署出面协调，北部、南部还有余裕量的县市已答应协助解决。行政院环保署环境督察总队长萧清郎表示，目标是8月底完成这些堆置的垃圾。</p>
@@ -57,42 +57,36 @@
 
 
 <strong>相关新闻：</strong>
-<li><a href="https://github.com/nat207/djy/blob/master/gb/14/10/23/n4279091.md#1">家家豪环保公司非法贮存回收物</a></li>
-<li><a href="https://github.com/nat207/djy/blob/master/gb/14/11/8/n4291504.md#1">八德市资展企业社 合法掩护非法私收废弃物</a></li>
-<li><a href="https://github.com/nat207/djy/blob/master/gb/14/12/28/n4328486.md#1">业者山区丢废弃物  基市府将罚</a></li>
-<li><a href="https://github.com/nat207/djy/blob/master/gb/15/2/18/n4370164.md#1">派少年清福岛废弃物  日无良老板被逮</a></li>
-<li><a href="https://github.com/nat207/djy/blob/master/gb/15/3/11/n4385033.md#1">“废弃物处理机构评鉴”绩优厂商获表扬</a></li>
-<li><a href="https://github.com/nat207/djy/blob/master/gb/15/4/9/n4407996.md#1">彰县垃圾消化不良  议员促正视环境问题</a></li>
-<li><a href="https://github.com/nat207/djy/blob/master/gb/15/4/10/n4408854.md#1">摩顿付费回收废弃物</a></li>
-<li><a href="https://github.com/nat207/djy/blob/master/gb/15/4/19/n4415380.md#1">全球电子垃圾 美国、中国丢最多</a></li>
-<li><a href="https://github.com/nat207/djy/blob/master/gb/15/4/30/n4424267.md#1">台北市乱弹烟蒂累犯 5/1起重罚</a></li>
-<li><a href="https://github.com/nat207/djy/blob/master/gb/15/5/20/n4439091.md#1">电子废弃物污染亚非多国受害深</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/14/10/23/n4279091.md#1">家家豪环保公司非法贮存回收物</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/14/11/8/n4291504.md#1">八德市资展企业社 合法掩护非法私收废弃物</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/14/12/28/n4328486.md#1">业者山区丢废弃物  基市府将罚</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/15/2/18/n4370164.md#1">派少年清福岛废弃物  日无良老板被逮</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/15/3/11/n4385033.md#1">“废弃物处理机构评鉴”绩优厂商获表扬</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/15/4/9/n4407996.md#1">彰县垃圾消化不良  议员促正视环境问题</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/15/4/10/n4408854.md#1">摩顿付费回收废弃物</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/15/4/19/n4415380.md#1">全球电子垃圾 美国、中国丢最多</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/15/4/30/n4424267.md#1">台北市乱弹烟蒂累犯 5/1起重罚</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/15/5/20/n4439091.md#1">电子废弃物污染亚非多国受害深</a></li>
 <hr>
 
 
 <strong>编辑推荐：</strong>
-<li><a href="https://github.com/onzhi266/djy/blob/master/gb/20/2/22/n11887949.md#1">美参议员：中共刻意控制新冠病毒信息流动</a></li>
-<li><a href="https://github.com/tsiac2612/djy/blob/master/gb/17/12/14/n9955432.md#1" target="_blank">文革中自杀的几个名人（3）红岩作者罗广斌</a></li><li><a href="https://github.com/nat207/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank">亿万人与东方一本奇书</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/12/10/18/n3709213.md#1" target="_blank">在东方健康博览会上见到李洪志师父</a></li>
+<li><a href="https://github.com/upjkzu3674/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank">解体中共复兴中华</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/17/12/21/n9981424.md#1" target="_blank">林辉：中共治下红楼泪 谁解其中味？</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/12/8/27/n3668851.md#1" target="_blank">吕溪珍：对大连警察的劝善信</a></li>
 <hr>
 
 <strong>热门新闻：</strong>
-<li><a href="https://github.com/nat207/djy/blob/master/gb/20/5/17/n12116387.md#1">太极掌门马保国PK王庆民 10秒被击倒3次</a></li>
-<li><a href="https://github.com/nat207/djy/blob/master/gb/20/5/18/n12117371.md#1">WHA登场世卫中共拒台 料各国将联手发声反制</a></li>
-<li><a href="https://github.com/nat207/djy/blob/master/gb/20/5/17/n12116772.md#1">川普：美掌握很多有关病毒实验室的不好信息</a></li>
-<li><a href="https://github.com/nat207/djy/blob/master/gb/20/5/17/n12116520.md#1">【一线采访】舒兰公安局瘫痪 爆首例死亡</a></li>
-<li><a href="https://github.com/nat207/djy/blob/master/gb/20/5/17/n12116632.md#1">传平壤广场移除金日成、金正日肖像</a></li>
-<li><a href="https://github.com/nat207/djy/blob/master/gb/20/5/16/n12115144.md#1">对台湾赞不绝口 黄秋生：我的兄弟也要移民了</a></li>
-<li><a href="https://github.com/nat207/djy/blob/master/gb/20/5/17/n12116007.md#1">盼辛龙走出丧妻之痛 吴宗宪：已下时间通牒</a></li>
-<li><a href="https://github.com/nat207/djy/blob/master/gb/20/5/18/n12117650.md#1">因男团解散陷低潮 潘君仑返乡务农找回动力</a></li>
-<li><a href="https://github.com/nat207/djy/blob/master/gb/20/5/18/n12118146.md#1">吴念真粉专已找回 遗憾贴文“几乎删光”</a></li>
-<li><a href="https://github.com/nat207/djy/blob/master/gb/20/5/17/n12116539.md#1">爆杜汶泽包揽家务 田蕊妮幸福当“多余人”</a></li>
-<li><a href="https://github.com/nat207/djy/blob/master/gb/20/5/17/n12115416.md#1">【疫情中的纽约人】破解预言的人</a></li>
-<li><a href="https://github.com/nat207/djy/blob/master/gb/20/5/17/n12116029.md#1">隋朝人仙岛奇遇 回国已是唐朝中期</a></li>
-<li><a href="https://github.com/nat207/djy/blob/master/gb/20/5/1/n12076409.md#1">【历史上的瘟疫】带走伦敦1/5人口的瘟疫</a></li>
-<li><a href="https://github.com/nat207/djy/blob/master/gb/20/4/5/n12004394.md#1">入地府看见善恶记账簿 忏悔改过可销债</a></li>
-<li><a href="https://github.com/nat207/djy/blob/master/gb/20/5/14/n12109562.md#1">屡现神迹的唐朝高僧释僧伽</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/16/5/17/n7904818.md#1">组图：李冰冰入选戛纳红毯十大最美女星</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/16/5/19/n7908433.md#1">谢金燕泪崩暂别演艺圈 王彩桦心疼慰留</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/16/5/18/n7906277.md#1">王力宏40岁生日吓傻了 满屋星友贺寿</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/16/5/17/n7902988.md#1">传陈妍希敲定婚期 7月19日北京嫁陈晓</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/16/5/19/n7910825.md#1">欧阳菲菲日籍丈夫病逝 享年77岁</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/16/5/19/n7908663.md#1">传韩正想在十九大退休 江派即将失守上海？</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/16/5/18/n7908165.md#1">传郭伯雄曾3次策划外逃 “化妆出逃”内幕曝光</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/16/5/18/n7907941.md#1">【专访】前中情局局长谈中美情报之战</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/16/5/18/n7908142.md#1">百度丑闻愈曝愈多 整改掺水遭陆媒批评</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/16/5/19/n7910038.md#1">中共战机南海拦截美侦察机 美：不安全事件</a></li>
 <hr>
 
-<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/nat207/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/nat207/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/15/7/27/n4489515.htm">处理事业废弃物 台经部应协调</a></p><hr>
+<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/eizauy3553/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/eizauy3553/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/15/7/27/n4489515.htm">处理事业废弃物 台经部应协调</a></p><hr>
 
-<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="http://d1p1.ip.zn2.us/v.php?action=qrcode&url=https://github.com/nat207/djy/blob/master/gb/15/7/27/n4489515.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/nat207/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/nat207/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/nat207/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/nat207/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/nat207/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/nat207/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/nat207/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/nat207/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/nat207/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/nat207/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/nat207/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/nat207/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/nat207/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/nat207/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/nat207/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/nat207/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/nat207/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/nat207/djy/master/gb/300/st1.jpg" title="关注3亿人三退"  alt="关注3亿人三退"></a><br><a href="https://github.com/nat207/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/nat207/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/nat207/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/nat207/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/nat207/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/nat207/djy/master/gb/300/sj1.jpg" title="303万人举报江泽民"  alt="303万人举报江泽民"></a><br><a href="https://github.com/nat207/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/nat207/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/nat207/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/nat207/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/nat207/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/nat207/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/nat207/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/nat207/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/nat207/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/nat207/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/nat207/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/nat207/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/nat207/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/nat207/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/nat207/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/nat207/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/nat207/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/nat207/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/nat207/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/nat207/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/nat207/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/nat207/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/nat207/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/nat207/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
+<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/eizauy3553/djy/blob/master/gb/15/7/27/n4489515.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/eizauy3553/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/eizauy3553/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/eizauy3553/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
